--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/custome
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://91.194.250.154:3306/test_happy
+spring.datasource.username=itschool_sql4
+spring.datasource.password=itschool_sql4
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
